# py-web-audio-api

./: AGENTS.md  Cargo.toml  LICENSE  README.md  pyproject.toml  web-audio-api-idl.txt
.cargo/: config.toml
.github/workflows/: CI.yml
examples/: analyser_meter.py  buffer_source.py  media_element.py  mic_input.py  notebook_quickstart.ipynb  osc_gain.py  playback_stats.py  recorder.py  stream_in.py  stream_out.py  vu_meter.py  worklet_white_noise.py
src/: audio_scheduled_source_node.rs  context.rs  core.rs  data.rs  lib.rs  nodes.rs
tests/: test_idl_surface.py  test_smoke.py
tools/: check_idl_surface.py
