[package]
name = "web-audio-api"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "web_audio_api"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["abi3-py311"] }
pyo3-async-runtimes = { version = "0.28", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
web-audio-api-rs = { version = "1.2.0", package = "web-audio-api" }
