[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "web-audio-api"
dynamic = ["version"]
requires-python = ">=3.11"
description = "A Rust/Python implementation of the Web Audio API, for use in non-browser contexts"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["web-audio-api", "audio", "sound", "dsp"]
classifiers = [
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Repository = "https://github.com/robotto/py-web-audio-api"
Issues = "https://github.com/robotto/py-web-audio-api/issues"
